welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: not found: value c
  c = a/10
  ^shareDigit:3: error: not found: value d
  d = a%10
  ^shareDigit:4: error: not found: value e
  e = b/10
  ^shareDigit:5: error: not found: value f
  f = b%10
  ^shareDigit:6: error: not found: value c
  if (c==e||c==f||d==e||d==f)
      ^shareDigit:6: error: not found: value e
  if (c==e||c==f||d==e||d==f)
         ^shareDigit:6: error: not found: value c
  if (c==e||c==f||d==e||d==f)
            ^shareDigit:6: error: not found: value f
  if (c==e||c==f||d==e||d==f)
               ^shareDigit:6: error: not found: value d
  if (c==e||c==f||d==e||d==f)
                  ^shareDigit:6: error: not found: value e
  if (c==e||c==f||d==e||d==f)
                     ^shareDigit:6: error: not found: value d
  if (c==e||c==f||d==e||d==f)
                        ^shareDigit:6: error: not found: value f
  if (c==e||c==f||d==e||d==f)
                           ^