welcome.lessons.welcome.bat.bool2.ShareDigit.scala.code
def shareDigit(a:Int, b:Int):Boolean = {
  c = a/10
  d = a%10
  e = b/10
  f = b%10
  if (c==e||c==f||d==e||d==f)
  	return true
  else return false
}